# backend/src/main/java/de/digidrivelog/controller/DriveController.java
@@ -11,37 +11,34 @@ import jakarta.validation.Valid;
 import java.util.List;
 
 @RestController
-@RequestMapping("/api")
+@RequestMapping("/ddl/api")
 @RequiredArgsConstructor
-@CrossOrigin(origins = "http://localhost:3000")
+@CrossOrigin(origins = "*")
 public class DriveController {
 
     private final DriveService driveService;
 
     @PostMapping("/drives")
-    public ResponseEntity<DriveDto> createDrive(@Valid @RequestBody CreateDriveRequest request, @PathVariable Long carId) {
-        if (request.getCarId() == null) {
-            request.setCarId(carId);
-        }
+    public ResponseEntity<DriveDto> createDrive(@Valid @RequestBody CreateDriveRequest request) {
         DriveDto createdDrive = driveService.createDrive(request);
         return ResponseEntity.status(org.springframework.http.HttpStatus.CREATED).body(createdDrive);
     }
 
-    @GetMapping("/drives/{id}")
-    public ResponseEntity<DriveDto> getDriveById(@PathVariable Long id) {
-        DriveDto drive = driveService.getDriveById(id);
+    @GetMapping("/drives/{driveId}")
+    public ResponseEntity<DriveDto> getDriveById(@PathVariable Long driveId) {
+        DriveDto drive = driveService.getDriveById(driveId);
         return ResponseEntity.ok(drive);
     }
 
-    @PutMapping("/drives/{id}")
-    public ResponseEntity<DriveDto> updateDriveWithId(@PathVariable Long id, @Valid @RequestBody UpdateDriveRequest request) {
-        DriveDto updatedDrive = driveService.updateDrive(id, request);
+    @PutMapping("/drives/{driveId}")
+    public ResponseEntity<DriveDto> updateDriveWithId(@PathVariable Long driveId, @Valid @RequestBody UpdateDriveRequest request) {
+        DriveDto updatedDrive = driveService.updateDrive(driveId, request);
         return ResponseEntity.ok(updatedDrive);
     }
 
-    @DeleteMapping("/drives/{id}")
-    public ResponseEntity<Void> deleteDriveWithId(@PathVariable Long id) {
-        driveService.deleteDrive(id);
+    @DeleteMapping("/drives/{driveId}")
+    public ResponseEntity<Void> deleteDriveWithId(@PathVariable Long driveId) {
+        driveService.deleteDrive(driveId);
         return ResponseEntity.noContent().build();
     }
 
@@ -51,7 +48,7 @@ public class DriveController {
         return ResponseEntity.ok(drives);
     }
 
-    @GetMapping("users/{userId}/drives")
+    @GetMapping("/users/{userId}/drives")
     public ResponseEntity<List<DriveDto>> getAllDrivesByUser(@PathVariable Long userId) {
         List<DriveDto> drives = driveService.getAllDrivesByUser(userId);
         return ResponseEntity.ok(drives);
